kubernetes/retool-agent-eval-worker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    retoolService: agent-eval-worker
  name: agent-eval-worker
spec:
  replicas: 1
  selector:
    matchLabels:
      retoolService: agent-eval-worker
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        retoolService: agent-eval-worker
    spec:
      containers:
      - args:
        - bash
        - -c
        - ./docker_scripts/wait-for-it.sh -t 0 $POSTGRES_HOST:$POSTGRES_PORT;
          ./docker_scripts/start_api.sh
        image: tryretool/backend:X.Y.Z
        name: agent-eval-worker
        ports:
        - containerPort: 3005
          name: retool
          protocol: TCP
        - containerPort: 9090
          name: metrics
          protocol: TCP
        resources:
          limits:
            cpu: 2
            memory: 2Gi
          requests:
            cpu: 1
            memory: 1Gi
