kubernetes/retool-jobs-runner.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: jobs-runner
  name: jobs-runner
spec:
  replicas: 1 # jobs-runner pod should never be more than 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: jobs-runner
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: jobs-runner
    spec:
      containers:
      - args:
        - bash
        - -c
        - ./docker_scripts/wait-for-it.sh -t 0 $POSTGRES_HOST:$POSTGRES_PORT;
          ./docker_scripts/start_api.sh
        image: tryretool/backend:2.80.16
        name: jobs-runner
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 2048M
          requests:
            cpu: "1"
            memory: 1024M
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.27.0
        imagePullPolicy: IfNotPresent
        command: ["/cloud_sql_proxy",
          "-instances=treasure-production:us-west1:treasure-production=tcp:5432" ]
        securityContext:
            runAsNonRoot: true
            runAsUser: 65532
      serviceAccount: workload-identity
      serviceAccountName: workload-identity
      restartPolicy: Always
status: {}
