kubernetes/retool-staging-jobs-runner.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: jobs-runner
  name: jobs-runner
spec:
  replicas: 1 # jobs-runner pod should never be more than 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: jobs-runner
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: jobs-runner
    spec:
      containers:
      - args:
        - bash
        - -c
        - ./docker_scripts/wait-for-it.sh -t 0 $POSTGRES_HOST:$POSTGRES_PORT;
          ./docker_scripts/start_api.sh
        image: tryretool/backend:2.113.8
        name: jobs-runner
        ports:
        - containerPort: 3000
        resources:
          limits: # a smaller memory footprint may not allow image to be pulled
            memory: "2.5Gi"
            cpu: "1"
          requests:
            cpu: "1"
            memory: "1.5Gi"
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.30.0
        imagePullPolicy: IfNotPresent
        command: ["/cloud_sql_proxy",
          "-instances=tn-mvp-staging:us-central1:staging-upgraded=tcp:5432" ]
        securityContext:
            runAsNonRoot: true
            runAsUser: 65532
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "250m"
      serviceAccount: workload-identity-ksa
      serviceAccountName: workload-identity-ksa
      restartPolicy: Always
status: {}
