kubernetes/retool-postgres.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    app: postgres
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: postgres
    spec:
      containers:
      - env:
        - name: POSTGRES_DB
          value: hammerhead_production
        - name: POSTGRES_HOST
          value: postgres
        - name: POSTGRES_PORT
          value: "5432"
        - name: POSTGRES_USER
          value: retool_internal_user
        - name: POSTGRES_PASSWORD
          valueFrom:
            secretKeyRef:
              name: retoolsecrets
              key: postgres_password
        name: postgres
        image: postgres:11.13
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          subPath: postgres
          name: data
      restartPolicy: Always
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: data
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    app: postgres
  name: postgres
spec:
  clusterIP: None
  ports:
  - name: headless
    port: 55555
    targetPort: 0
  selector:
    app: postgres
status:
  loadBalancer: {}
