kubernetes/retool-staging-container.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: retool-staging-api
  name: retool-staging-api
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: retool-staging-api
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: retool-staging-api
    spec:
      containers:
      - args:
        - bash
        - -c
        - ./docker_scripts/wait-for-it.sh -t 0 $POSTGRES_HOST:$POSTGRES_PORT;
          ./docker_scripts/start_api.sh
        image: tryretool/backend:2.113.8
        name: retool-staging-api
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: "2.5Gi"
            cpu: "1"
          requests:
            memory: "1.5Gi"
            cpu: "1"
      - name: cloud-sql-proxy
        image: gcr.io/cloudsql-docker/gce-proxy:1.30.0
        imagePullPolicy: IfNotPresent
        command: ["/cloud_sql_proxy",
          "-instances=tn-mvp-staging:us-central1:staging-upgraded=tcp:5432" ]
        securityContext:
            runAsNonRoot: true
            runAsUser: 65532
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "250m"
      # any node pools that schedule this job must have workload-identity properly configured
      serviceAccount: workload-identity-ksa
      serviceAccountName: workload-identity-ksa
      restartPolicy: Always

status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: ./kompose convert
    kompose.version: ""
  creationTimestamp: null
  labels:
    io.kompose.service: retool-staging-api
  name: retool-staging-api
spec:
  type: LoadBalancer
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: retool-staging-api
status:
  loadBalancer: {}
