kubernetes/retool-workflows-backend-container.yaml
apiVersion: apps/v1 
kind: Deployment
metadata:
  labels:
    app: workflows-api
  name: workflows-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workflows-api
  template:
    metadata:
      labels:
        app: workflows-api
    spec:
      containers:
      - args:
        - bash
        - -c
        - ./docker_scripts/wait-for-it.sh -t 0 $POSTGRES_HOST:$POSTGRES_PORT;
          ./docker_scripts/start_api.sh
        image: tryretool/backend:X.Y.Z
        name: workflows-api
        ports:
        - containerPort: 3000
        resources:
          limits:
            memory: 8Gi
            cpu: 2
          requests:
            cpu: 1
            memory: 4Gi
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: workflows-api
  name: workflows-api
spec:
  type: LoadBalancer
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
  selector:
    app: workflows-api
